--- a/invernadero/custom.css
+++ b/invernadero/custom.css
@@ -1,6 +1,15 @@
+.head-title{
+
+}
+.main{
+  display: flex;
+  justify-content: center;
+}
 .index-topics{
   /*width: 200px;*/
-  height: 500px;
+  width: 15%;
+  /*height: 500px;*/
+    /*display: inline;*/
   /*
   width: 200px;
   height: 500px;
@@ -9,9 +18,12 @@
   top: 0px;
   left: 10px;
   */
-  font-size: 20px;
-
-
+  /*
+  position: fixed;
+  top: 10px;
+  left: 20px;
+  font-size: 18px;
+  */
 }
 ul.nav li a, ul.nav li a:visited {
     color: #fff !important;
@@ -24,15 +36,10 @@ ul.nav li a:hover, ul.nav li a:active {
 ul.nav li.active a {
     color: #fff !important;
 }
-.content{
-  /*
-  width: 50rem;
-  position: absolute;
-  top: 300px;
-  left: 220px;
-  */
-}
 .presentation{
+    width: 61rem;
+    height: 5rem;
+    /*display: inline;*/
   /*
   width: 50rem;
   position: absolute;
@@ -40,7 +47,23 @@ ul.nav li.active a {
   left: 350px;
   */
 }
+
+.content{
+  z-index: 1;
+  background-color: white;
+  /*
+  width: 50rem;
+  position: absolute;
+  top: 300px;
+  left: 220px;
+  */
+}
 .img-custom{
-  width: 100%;
-  height: auto;
+  z-index: -1;
+  position: fixed;
+  top: 100px;
+  left: 200px;
+
+  width: 60rem;
+  height: 10rem;
 }
