--- a/invernadero/custom.css
+++ b/invernadero/custom.css
@@ -7,7 +7,7 @@
 }
 .index-topics{
   /*width: 200px;*/
-  width: 100%;
+  /*width: 100rem;*/
   /*height: 500px;*/
     /*display: inline;*/
   /*
@@ -49,7 +49,7 @@ ul.nav li.active a {
 }
 
 .content{
-  z-index: 1;
+  /*z-index: 1;*/
   background-color: white;
   /*
   width: 50rem;
@@ -60,10 +60,11 @@ ul.nav li.active a {
 }
 .img-custom{
   z-index: -1;
+  /*
   position: fixed;
   top: 100px;
   left: 200px;
-
+  */
   width: 60rem;
   height: 10rem;
 }
