--- a/invernadero/custom.css
+++ b/invernadero/custom.css
@@ -1,70 +1,29 @@
 .head-title{
-
-}
-.main{
-  display: flex;
-  justify-content: center;
+  position: fixed;
+  width: 100%;
+  height: 80px;
 }
 .index-topics{
-  /*width: 200px;*/
-  /*width: 100rem;*/
-  /*height: 500px;*/
-    /*display: inline;*/
-  /*
-  width: 200px;
-  height: 500px;
-
+  width: 180px;
   position: fixed;
-  top: 0px;
-  left: 10px;
-  */
-  /*
-  position: fixed;
-  top: 10px;
-  left: 20px;
-  font-size: 18px;
-  */
-}
-ul.nav li a, ul.nav li a:visited {
-    color: #fff !important;
-}
-
-ul.nav li a:hover, ul.nav li a:active {
-    color: #fff !important;
-}
-
-ul.nav li.active a {
-    color: #fff !important;
+  padding-top: 80px;
 }
 .presentation{
-    width: 61rem;
+    /*
+    width: 5rem;
     height: 5rem;
-    /*display: inline;*/
-  /*
-  width: 50rem;
-  position: absolute;
-  top: 0px;
-  left: 350px;
-  */
+    */
 }
 
 .content{
-  /*z-index: 1;*/
   background-color: white;
-  /*
-  width: 50rem;
-  position: absolute;
-  top: 300px;
-  left: 220px;
-  */
+  padding-left: 190px;
+  padding-top: 80px;
+
 }
 .img-custom{
-  z-index: -1;
   /*
-  position: fixed;
-  top: 100px;
-  left: 200px;
-  */
-  width: 60rem;
+  width: 5rem;
   height: 10rem;
+  */
 }
