--- a/invernadero/custom.css
+++ b/invernadero/custom.css
@@ -4,9 +4,12 @@
   height: 80px;
 }
 .index-topics{
+  /*padding-top: 80px;*/
+
   width: 200px;
+  height: 500px;
   position: fixed;
-  padding-top: 80px;
+  top : 90px
 }
 .presentation{
     /*
