--- a/_layouts/home_custom.html
+++ b/_layouts/home_custom.html
@@ -16,14 +16,13 @@
 	
 	<body class="p-3 mb-2 bg-secondary text-white">
 		<div class="container">
+			
 			{% include menu.html %}
+			
 			{{content}}
-	 		
-	 		
-	 		
-	 		
+	 			 		
 	 		<div class="container">
-	 		<div class="row p-3 mb-2 bg-dark text-white ">
+	 		<div class="row p-3 mb-2 " style="background-color:#1b262c; color:white;">
     			<div class="col-sm-2">
 	      	
 	    		</div>
@@ -37,8 +36,9 @@
 			 		
 	    		</div>
   			</div>
-	 		<div class="row p-3 mb-2 bg-info text-white">
-	    		<div class="col-sm-2">
+
+	 		<div class="row p-3 mb-2  text-white" style="background-color:#0f4c75;">
+	    		<div class="col-sm-2" >
 			 		
 	    		</div>
 	    		<div class="col-sm-8">
@@ -47,8 +47,20 @@
 	    		<div class="col-sm-2">
 			 		
 	    		</div>
+			</div>
+				<!-- 
+			<div class="row p-4  text-white" style="background-color:#bbe1fa;">
+	    		<div class="col-sm-2">
+			 		
+	    		</div>
+	    		<div class="col-sm-8">
+			 		
+	    		</div>
+	    		<div class="col-sm-2">
+			 		
+	    		</div>
 			</div>  
-						
+					-->	
 			</div>
 		</div>
 	</body>
