--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -14,42 +14,37 @@
 		<title>{{ page.title }}</title>
 	</head>
 	
-	<body class="p-3 mb-2 bg-dark text-dark">
+	<body class="p-3 mb-2 bg-dark text-white">
 		<div class="container">
 			
 			{% include menu.html %}
-			
-			{{content}}
-	 			 		
-	 		<div class="container">
-	 		<div class="row p-3 mb-2 " style="background-color:#1b262c; color:white;">
-    			<div class="col-sm-2">
-	      	
-	    		</div>
-	    		<div class="col-sm-4">
-	      			{% include photo.html %}
-	    		</div>
-	    		<div class="col-sm-4">
-					{% include education.html %}				
-	    		</div>
-	    		<div class="col-sm-2">
-			 		
-	    		</div>
-  			</div>
-
-	 		<div class="row p-3 mb-2  text-white" style="background-color:#0f4c75;">
-	    		<div class="col-sm-2" >
-			 		
-	    		</div>
-	    		<div class="col-sm-8">
-			 		{% include experience.html %}
-	    		</div>
-	    		<div class="col-sm-2">
-			 		
-	    		</div>
+	 		<br>
+	 		{{content}}
+	 		<div class="row">
+			  <div class="col-4">
+			    
+			    <div class="list-group" id="list-tab" role="tablist">
+			      {% for data in site.data.projects.projects %}
+			      <a class="list-group-item list-group-item-action" id="list-{{ data.id }}-list" data-toggle="list" href="#list-{{ data.id }}" role="tab" aria-controls="profile">{{ data.project }}</a>
+			      {% endfor %}			    
+			    </div>
+			    
+			  </div>
+			  
+			  <div class="col-8">
+			    <div class="tab-content" id="nav-tabContent">
+   			      
+   			      {% for data in site.data.projects.projects %}
+			      <div class="tab-pane fade" id="list-{{ data.id }}" role="tabpanel" aria-labelledby="list-{{ data.id }}-list">
+			      	
+			      	<iframe src=" {{data.url}} " width="100%" height="550px"></iframe>
+				  </div>
+			      {% endfor %}			      
+			    
+			    </div>
+			  </div>
 			</div>
-			
-			</div>
+	 		
 		</div>
 	</body>
 </html>
