--- a/_layouts/document.html
+++ b/_layouts/document.html
@@ -14,6 +14,6 @@
 		<title>{{ page.title }}</title>
 	</head>
 	<body >
-		<div class="container">{{content}}</div>	
+		<div class="container text-justify">{{content}}</div>	
 	</body>
 </html>
